# ffxiv-item-name-database-cloudfront

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml  sam.yml  tempalte.yml  template.yml
.circleci/: config.yml
